Pull some pathces from MAI.

--- a/TODO
+++ b/TODO
@@ -45,4 +45,20 @@ Compare methods: mp5 with u2, x2, genetic ...
   Vibration - acoustics stand
   Requirements: my probe, interface (HID-alike, joystick, some existent)
 
+
+### Research
+   Attractors dimensions
+   err(tau) random start
+
+
+### Print:
+ chaos/gen/A_low_voltage_low_power_chaoti.pdf
+ wojeeoda_j_hysteretic_effects_of_dry_friction_8_PTRSA2008-366\(8\).pdf
+
+### read
+  Кузнецов_Динамический_хаос_.pdf
+  complex_vibr_in_simple_sys_anyshenko.pdf
+  Analysis.And.Simulation.Of.Chaotic.Systems.Hoppensteadt.2000.0387989439.pdf
+
+
 % vim:ft=markdown
