--- a/atuworks.bib
+++ b/atuworks.bib
@@ -433,6 +433,7 @@
   language     = {english},
   langid       = {english},
   year = {2015},
+  doi = {10.1109/STC-CSIT.2015.7325435},
   pages = {73--75}
 }
 
@@ -479,7 +480,7 @@
 
 @Article{atu_jacs2015,
   title = {Multi-model identification system properties near extremum: simulations and analysis},
-  journal = {Journal of Applied Computer Science – JACS-2015 (Scopus)},
+  journal = {Journal of Applied Computer Science – JACS-2015},
   author = atume,
   language     = {english},
   langid       = {english},
