--- a/chua_testsys.tex
+++ b/chua_testsys.tex
@@ -31,16 +31,16 @@
 Единственным нелинейным элементом в данной системе является ``диод Чуа''
 (обозначен на схеме как $R_c$) с
 характеристикой $g(V)$~(рис.~\ref{atu:f:diodchua}),
-обладающий различным отрицательным наклоном
+обладающей различным отрицательными наклонами
 ($m_0$ и $m_1$) на разных участках,
-тем самым являющийся управляемым источником энергии.
+и тем самым являющийся управляемым источником энергии.
 
 
 \begin{equation}
 g(V) =
 \begin{cases}
-  m_1 V = ( m_0 + m_2 ) V & |V| <   U_0, \\
-  m_0 V                   & |V| \ge U_0.
+  m_1 V = ( m_0 + m_2 ) V , & |V| <   U_0, \\
+  m_0 V ,                   & |V| \ge U_0.
 \end{cases}
 \label{atu:eq:diodchua}
 \end{equation}
@@ -54,32 +54,32 @@ g(V) =
 \end{figure}
 
 
-При этом, параметр \(m_0\) определяет поступление энергии в систему
+При этом параметр \(m_0\) определяет поступление энергии в систему
 при больших амплитудах \(V_1\), и, в целом, характеризует
 энергетические возможности источника.
-Аналогично, параметр \(m_1\) определяет поступление энергии
+Аналогично, параметр \(m_1\) характеризует поступление энергии
 при малых колебаниях, в частности, определяет, будет ли
 система переходить в колебательное состояние при малых начальных
 возмущениях, и какой будет режим этих колебаний.
-С другой стороны, параметр \(m_1\) является суммой
+С другой стороны, поскольку параметр \(m_1\) является суммой
 ``глобального параметра'' \(m_0\) и ``довеска'',
 определяющего дополнительный вклад при малых амплитудах,
 то имеет смысл перейти от параметра \(m_1\) к параметру
-\( m_2 = m_1 - m_0 \), который тем самым, в целом
-и определяет нелинейность
+\( m_2 = m_1 - m_0 \), который
+и определяет в целом нелинейность
 системы. При \( m_2 = 0 \) система становится линейной
 и не представляет особого интереса. Поэтому
 в данной работе в качестве
-идентифицируемого параметра рассматривается параметр \(m_2\).
+идентифицируемого параметра рассматривается именно параметр \(m_2\).
 
-В зависимости от величины этого параметра,
+Важно, что в зависимости от величины параметра $m_2$,
 система может переходить в режимы затухания,
 периодического и сложно-периодического движения, а также в режим
 хаотических колебаний~\cite{anisch_nonlin_eff,magni_new_meth}. При этом сложно-периодическое и хаотическое
 движения чередуются с изменением величины \(m_2\).
 
 
-Классически параметры задаются следующим образом~\cite{buga_chua}:
+Классически параметры системы Чуа задаются следующим образом~\cite{buga_chua}:
 $C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0.7 ] $.
 
 Введём обозначения:
@@ -94,7 +94,7 @@ $C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0
 \]
 
 \noindent
-Получаем:
+Тогда:
 
 \begin{equation}
 \begin{cases}
@@ -115,7 +115,7 @@ g_1(V) =
 \label{atu:eq:diodchua2}
 \end{equation}
 
-При этом классические значения параметров будут представлены следующим образом:
+При этом пересчитанные классические значения параметров будут представлены следующим образом:
 $ a_{11} = 6.5 $, $a_{21} = 0.7$, $ a_{23} = -7 $, $ a_g = 4.5 $,
 $ \mu \in [ 1.29 ; 5.6 ] $.
 Соответственно, в этих обозначениях
@@ -133,8 +133,10 @@ $ \mu \in [ 1.29 ; 5.6 ] $.
 \end{figure}
 
 
-Для определения критерия рассмотрим зависимости
-$q_{*}(\mu) $, полученные путём моделирования
+Для определения вида критерия рассмотрим зависимости
+$q_{*}(\mu) $ (индексом ``*'' будем обозначать применение какого-либо из индексов,
+обозначающих исходный сигнал для критерия и способ усреднения),
+полученные путём моделирования
 для системы Чуа (рис.~\ref{atu:f:chua_q}):
 
 \begin{figure}[htb!]
@@ -150,10 +152,8 @@ $q_{*}(\mu) $, полученные путём моделирования
 является наилучшим кандидатом в критерии, ввиду близкой к линейной зависимости
 в рабочем диапазоне.
 
-% TODO: общие слова перенести к первой системе.
-Следующим важным параметром, необходимым для системы идентификации, является
-характерное время время оценивания $\tau$, или же обратная ему величина $a_q$,
-входящая в (\ref{atu:eq:q}).
+Следующим важным параметром, необходимым для эффективной работы системы идентификации, является
+характерное время время оценивания $\tau$ (\ref{atu:eq:q}), или же обратная ему величина $a_q$.
 
 Для предварительного оценивания величины $a_q$ рассмотрим спектры системы при различных
 $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графиков, спектр системы достаточно
@@ -194,7 +194,7 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 параметр $\mu_o$ для объекта задавался двумя способами:
 
 \begin{equation}
- \mu_o(t) = p_0 + U_p \sign \sin( \omega_p t ),
+ \mu_o(t) = p_0 + U_p \sign \sin( \omega_p t )
   \label{atu:eq:chua_mu_sign}
 \end{equation}
 
@@ -221,7 +221,8 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 рассмотрим зависимости среднеквадратических ошибок идентификации
 от основных параметров системы идентификации.
 
-Одним из важнейших параметров является $q_\gamma$ -- масштаб функции качества.
+Одним из важнейших параметров является $q_\gamma$ -- масштаб функции качества
+((\ref{atu:eq:F_gauss})--(\ref{atu:eq:F_log})).
 Зависимости для этого параметра приведены на рис.~\ref{atu:f:chua_e_qgamma}.
 
 \begin{figure}[htb!]
@@ -235,7 +236,7 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 \label{atu:f:chua_e_qgamma}
 \end{figure}
 
-Явно выраженного экстремума не было обнаружено, что свидетельствует
+Явно выраженного экстремума не наблюдается, что свидетельствует
 о сильной робастности метода.
 
 Для проверки корректности выбора величины $a_q$ была построены зависимости
@@ -253,7 +254,7 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 \label{atu:f:chua_e_a_q}
 \end{figure}
 
-Как и следовало ожидать, первоначальная оценка ``правильного'' значения величины $a_q$
+Как видно, первоначальная оценка ``правильного'' значения величины $a_q$
 была сделана достаточно точно. При этом, при синусоидальном изменении параметра объекта
 меньшая ошибка идентификации наблюдается при меньших значениях $a_q$, что связано
 с тем, в данном случае нет необходимости в слежении за скачкообразно изменяющимся параметром,
