--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -42,31 +42,32 @@
 
 
 % ----------------------------------------------------------------------------------------------------
-\MonoArticle{atu}{Идентификация хаотических систем}{А.И.~Гуда, А.И.~Михалёв}{Гуда~А.И., Михалёв~А.И.}
+\MonoArticle{atu}{Оценивание эффективности применения интегральных критериев в задачах параметрической идентификации хаотических систем}{А.И.~Гуда, А.И.~Михалёв}{Гуда~А.И., Михалёв~А.И.}
 
 \subsection*{Введение}
 
-Синтез систем иденификации для сложных нелинейных динамических систем
-всегда был сложной задачей. Невозможность построения
-аналитической зависимости значения идентифицируемого параметра
-от выхода объекта сильно ограничивает множество работоспособных
+Синтез систем идентификации для сложных нелинейных динамических систем
+был и остаётся сложной задачей. Невозможность определения
+аналитической зависимости значений идентифицируемых параметров
+от выхода объекта делает неработоспособными большинство известных
 методов идентификации. Наибольшую сложность для идентификации
 представляют системы динамического хаоса~\cite{moon_chaotic_vibr,anisch_nonlin_eff,sprott_212}.
-Даже лучшие в своем классе -- методы адаптивно-поисковой идентификации -- % TODO: ref
+Даже лучшие в своем классе, методы адаптивно-поисковой идентификации, % TODO: ref
 в чистом виде оказываются в данном случае неработоспособными.
 Успешность построения системы идентификации для хаотических
 систем определяется наличием интегрального критерия,
-описывающего динамику системы и зависящего от идентифицируемых параметров.
+учитывающего динамику системы и зависящего от идентифицируемых параметров.
 
 
 \subsection*{Критерии идентификации}
 
-Как уже было отмечено, для успешности процесса идентификации необходимо
-существование интегрального критерия, зависящего (желательно наиболее простой зависимостью)
-от величины идентифицируемого параметра. Конкретный вид определяется самой идентифицируемой
-системой. При этом, довольно часто (но не всегда) в качестве основы для такого критерия выступает
-какая-либо энергетическая зависимость. С учётом усреднения на требуемом интервале,
-один из простых видов критерия может быть задан так:
+Как уже было отмечено, для успешности процесса идентификации требуется
+построение различных интегральных критериев, зависящих,
+хотя бы в первом приближении
+от величины идентифицируемого параметра. Конкретный вид определяется самим идентифицируемым
+объектом. При этом, довольно часто (но не всегда) в качестве основы для такого критерия выступает
+некая энергетическая зависимость. С учётом усреднения на требуемом интервале,
+один из простых видов критерия может быть задан как
 
 \begin{equation}
 \od{q_{x^2}}{t}
@@ -78,8 +79,8 @@
 
 \noindent
 где $\tau$ -- характерное время оценивания, $x(t)$ -- выбранная переменная состояния системы.
-Это далеко не единственный способ, но в данной работе будет использоваться именно он,
-и обозначения видов критерием будут основываться на (\ref{atu:eq:q}).
+Это далеко не единственный вид определения критерия, но в данной работе предлагается именно он,
+и последующие критерием будут использовать (\ref{atu:eq:q}).
 
 \subsection*{Мультимодельные методы идентификации}
 
@@ -94,28 +95,25 @@
 $ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
 На вход как объекта, так и каждой из моделей подаётся (при необходимости)
 входной сигнал $u(t)$. Выход моделей $x_{mi}(t)$ измеряется точно,
-а объекта $x_o(t)$ -- с определённой помехой $w(t)$. При необходимости искусственную помеху
-со сходными характеристиками можно подмешивать и выходу моделей.
+а объекта $x_o(t)$ -- с определённой, наперёд неизвестной помехой $w(t)$. При необходимости искусственную помеху
+со сходными характеристиками можно подмешивать и к выходу моделей.
 Обозначим $q_o(t)$ -- текущее значение критерия для
 объекта, $q_{mi}(t)$ -- для $i$-той модели.
 Соответственно $p_o(t)$ -- значение параметра для объекта,
-$p_{mi}(t)$ -- для модели номер $i$.
+$p_{mi}(t)$ -- для $i$-той модели.
 
 
-Введём следующее определение:
-
-
-\textbf{ Агент } -- динамическая система, получающая выходной ($x(t)$),
-и, при необходимости входной сигнал ($u(t)$) одной или нескольких моделей,
+Определение: \textbf{поисковый агент} -- это динамическая система, получающая выходной ($x(t)$),
+и, при необходимости входной сигнал ($u(t)$) от одной или нескольких моделей,
 может быть информацию от других поисковых агентов,
-на основании оцененного критерия идентификации
+на основании значения критерия идентификации
 реализующая алгоритм настройки параметра модели (моделей)
-таким образом, что бы обеспечить идентификацию заданного параметра.
+таким образом, чтобы обеспечить идентификацию заданного параметра.
 
-Один агент может управлять как одной моделью (рис.~\ref{atu:f:agent1}),
+Один поисковый агент может управлять как одной моделью (рис.~\ref{atu:f:agent1}),
 так и несколькими. При этом
 он может использовать информацию, как полученную как от других
-агентов, так и полученную в результате обработки данных от других агентов.
+агентов, так и полученную в результате обработки данных на других уровнях системы идентификации.
 
 \begin{figure}[htb!]
 \begin{center}
@@ -126,12 +124,12 @@ $p_{mi}(t)$ -- для модели номер $i$.
 \end{figure}
 
 
-В случае, один агент настраивает несколько моделей,
-или/и если пространство параметров имеет больше размерность больше единицы,
+В случае, когда один агент настраивает несколько моделей,
+или/и, если пространство параметров имеет размерность больше единицы,
 вместо простого индекса $i$ могут применяется составные.
 
 В простейших случаях возможно построение системы идентификации
-и одной моделью, и соответственно одним агентом.
+с одной моделью, и соответственно одним поисковым агентом.
 Примерами такого похода могут служить
 метод синхронного детектора \cite{adopt_cont_sys}
 и оригинальный адаптивно-поисковый метод \cite{mich_92}.
@@ -142,17 +140,17 @@ $p_{mi}(t)$ -- для модели номер $i$.
 временных затрат на повторяющийся поиск.
 
 Применение пары моделей \cite{atu_asau3}
-(в этом случае имеет смысл говорить об одном агенте)
+(в этом случае имеет смысл говорить об одном поисковом агенте)
 позволяет с меньшими временными затратами оценить градиент функции качества,
 и, как следствие -- определить значение параметра. Также значительным плюсом
 такого подхода является меньшая скорость изменения параметров моделей.
 
 Тем не менее, при использовании пары моделей неоправданно много времени
 тратится на перемещение поисковой пары, особенно при резких изменениях
-идентифицируемого параметра. Поэтому, применения множества
+идентифицируемого параметра. Поэтому, использование множества
 поисковых агентов может кардинально уменьшить время идентификации.
 
-Каждый агент, определяя величину $q_{mi}(t)$ , и получая $q_o(t)$,
+Каждый поисковый агент, определяя величину $q_{mi}(t)$ , и получая $q_o(t)$,
 вычисляет безразмерную функцию качества идентификации
 $F(q_o,q_m)$.
 
@@ -191,9 +189,9 @@ $F(q_o,q_m)$.
 \end{equation}
 
 Для всех рассмотренных функций $q_\gamma$ -- величина, обратная чувствительности
-функции качества -- задаёт масштаб и рабочий диапазон функции качества (рис.~\ref{atu:f:F_types}).
+функции качества, задаёт масштаб и рабочий диапазон функции качества (рис.~\ref{atu:f:F_types}).
 При этом, при необходимости, значения этих функций могут быть искусственно ограничены диапазоном $[0;1]$.
-Каждая имеет свой набор преимуществ и недостатков~\cite{atu_ISDMCI2016}. В данной работе будет использоваться
+Каждая имеет свой набор преимуществ и недостатков~\cite{atu_ISDMCI2016}. В данной работе используется
 функция (\ref{atu:eq:F_gauss}).
 
 \begin{figure}[htb!]
@@ -207,14 +205,14 @@ $F(q_o,q_m)$.
 При анализе конкретного агента, для упрощения записи, его индекс $i$ обозначим как ``c'' (current),
 предыдущий получает индекс ``l'' (left), а последующий -- ``r'' (right).
 Для единообразия дополним множество моделей двумя неподвижными псевдомоделями (fake models),
-обозначив и индексами ``ll'' и ``rr''. Для псевдомоделей считаем $  F_{ll} = F_{rr} = 0$,
+обозначив их индексами ``ll'' и ``rr''. Для псевдомоделей считаем $  F_{ll} = F_{rr} = 0$,
 а координаты выбираются за пределами рабочего диапазона поиска.
 
 
-Расмотрим 3 подхода к определению
-точки максимума функции качества, а следовательно -- значения идентифицируемого параметра \cite{atu_st99}.
+Рассмотрим 3 подхода к определению
+точки максимума функции качества, а следовательно -- значения идентифицируемого параметра \cite{atu_st99,atu_jacs2015}.
 Первый -- реализация
-метода COG (Center of gravity, Такаги-Сугено) \cite{atu_asau25},
+метода COG (Center of gravity, Такаги-Сугено) \cite{atu_asau25,atu_csit2015},
 используемого при дефаззификации систем нечёткой логики:
 
 \begin{equation}
@@ -229,7 +227,7 @@ $F(q_o,q_m)$.
 Второй подход призван уменьшить зависимость первого
 от влияния локальных экстремумов и границ. В этом
 случае определяется модель $M_{i_{m}}$ с максимальным значением
-$F$, и в оценке используется только ближайшая окрестность этой модели:
+$F$, а в оценке используется только ближайшая окрестность этой модели:
 
 \begin{equation}
   p_{le}
@@ -241,7 +239,7 @@ $F$, и в оценке используется только ближайшая
 \end{equation}
 
 Третий подход отличается от второго тем, что по трём точкам вблизи  $M_{i_{m}}$
-функция $F(p)$ аппроксимируется параболой, и её абсцисса вершины задаёт искомое
+функция $F(p)$ аппроксимируется параболой, и абсцисса её вершины задаёт искомое
 значение параметра. Сместим начало координат в точку
 $ ( p_c, F_c ) $. Тогда
 
@@ -310,7 +308,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 \noindent
 где $f_t$ -- сумма всех действующих ``сил'', $v_f$ -- коэффициент
-пропорциональности. Рассматриваем 3 действующие силы
+пропорциональности. Рассмотрим 3 действующие силы
 ($ f_t = f_c + f_n + f_e $):
 
 \begin{enumerate}
@@ -335,13 +333,13 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 Результаты моделирования показали, что в некоторых случаях
 имеет смысл введение дополнительных сил ``барьерного'' вида,
-для исключения пересечения траекторий поисковых агентов, или же ухода из рабочего диапазона.
+для исключения пересечения траекторий поисковых агентов, или же их ухода из рабочего диапазона.
 
 
 
 Для определения как точности, так и скорости работы системы
 идентификации, при моделировании процесса идентификации
-значения идентифицируемого параметра будут задаваться такими способами:
+значения идентифицируемого параметра задавались следующими образами:
 
 \begin{equation}
   p_o(t) = p_0 +  U_{p} \sin( \omega_{p} t ),
@@ -353,9 +351,9 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
   \label{atu:eq:p_sign}
 \end{equation}
 
-При этом будут измеряться среднеквадратические ошибки идентификации,
-что позволит исследовать применимость систем идентификации
-при различной динамике изменения параметра, а также
+При этом измерялись среднеквадратические ошибки идентификации,
+что позволило исследовать применимость систем идентификации
+при различной динамике изменения параметров, а также
 настроить параметры самой системы идентификации.
 
 Для моделирования как рассматриваемых идентифицируемых систем,
@@ -363,7 +361,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 программное средство ``qontrol''.
 
 
-\subsection*{Хаотические тестовые системы }
+\subsection*{Тестовые хаотические системы }
 
 % \input{lor_testsys.tex} % unfilled, but is near to good
 
@@ -392,13 +390,14 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 \subsection*{Выводы}
 
 В целом, применение рассмотренных видов критериев, в совокупности
-с мультимодельными (мультиагентными) методами идентификации
-работоспособность для определённого класса сложных динамических систем.
+с мультимодельными (мультиагентными) методами поисковой идентификации
+оказалось продуктивным, и показало их
+работоспособность для рассмотренных хаотических, и в какой-то мере эквивалентным им
+сложных динамических систем.
 
 
 
-Для каждой из рассмотренных систем удалось определить подходящий
-критерий качества. Для большинства из систем вид критерия
+Для большинства из рассмотренных систем вид критерия
 был получен практически автоматически, из анализа полученных
 в результате моделирования зависимостей, имеющих прямое или косвенное отношение
 к энергетическим параметрам. Для системы с сухим трением,
@@ -411,7 +410,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 Одновременная настройка параметров нескольких моделей ансамблем поисковых агентов
 позволила максимально преодолеть противоречие между скоростью и точностью
-идентификации. В этом методе время идентификации определяется
+идентификации. При таком подходе время идентификации определяется
 временем реакции идентифицируемой системы на изменение параметра.
 Для систем со сложной, а тем более хаотической динамикой это время достигает
 значительных величин, по сравнению с характерными временами самой динамики системы.
@@ -419,10 +418,10 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 Полученные зависимости ошибок идентификации от параметров
 самой системы идентификации, с одной стороны, позволяют
-правильно настроить эти параметры для получения максимально быстрого
-и точного процесса идентификации. В другой стороны, эти зависимости
-подчёркивают связь свойств идентифицируемого объекта с
-требуемыми качествами системы идентификации.
+правильно настроить эти параметры для получения максимально быстрой
+и точной идентификации. С другой стороны, эти зависимости
+характеризуют связь свойств идентифицируемого объекта с
+требуемыми качествами самой системы идентификации.
 
 
 \printbibliography
