--- a/fric_testsys.tex
+++ b/fric_testsys.tex
@@ -9,8 +9,8 @@
 Существуют динамические системы, не обладающие хаотическим поведением,
 которые, тем не менее, проявляют сходные свойства с точки зрения идентификации.
 А именно, непосредственное сравнение выходов системы и модели не позволяет
-сделать никаких выводов о соотношениях между параметрами модели о объекта.
-Одним из примеров является динамическая система (\ref{atu:eq:dryfric_sys}),
+сделать никаких выводов о соотношениях между параметрами модели и объекта.
+Одним из примеров таких систем является динамическая система (\ref{atu:eq:dryfric_sys}),
 моделирующая поведение тела заданной массы по действием внешней вынуждающей силы
 и силы сухого трения
 \cite{berger_friction,atu_asau11}:
@@ -27,19 +27,20 @@ $u(t)$ -- вынуждающая сила,
 $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 
 Важной особенностью при моделировании силы сухого трения является тот факт,
-это это силу невозможно корректно выразить аналитически. Более того,
+что это силу невозможно корректно выразить аналитически. Более того,
 её алгоритмическое представления неизбежно потребует учёта всех других сил,
 действующих на тело, то крайней мере, для корректного представления
 силы трения покоя. Эта особенность не даёт возможности
 аналитического анализа таких систем, за исключением ограниченного набора
 вырожденных случаев. При этом, такое поведение существенно затрудняет идентификацию,
-и в определённых случаях делает её принципиально невозможной.
+и, в определённых случая,х делает её принципиально невозможной.
 
 Основным параметром, в простейшем случае определяющим силу сухого
 трения, является $f_{dm}$ -- максимальная значение её модуля.
-Определение этой величины и будем считать целью задачи идентификации.
+Определение этой величины и будем считать целью задачи идентификации
+системы с сухим трением.
 
-Существенным свойством данной системы является то, что в каждой точке \(x\)
+В свою очередь, существенным свойством данной системы является то, что в каждой точке \(x\)
 система может находится в покое, даже если на неё действует
 внешняя сила (по модулю не превышающая $f_{dm}$).
 Если же рассмотреть пару или более подобных систем,
@@ -48,9 +49,9 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 или коэффициентов модели приводят к значительным изменениям
 выходного, причем реакция на возмущения может быть
 не ограничена во времени.
-Более того, если после какого-то момента времени
+Более того, даже если после какого-то момента времени
 параметры объекта и коэффициенты модели полностью совпадут,
-величина ошибки выходных не устремится к нулю, а останется на прежнем уровне.
+величина ошибки по выходнам не устремится к нулю, а останется на прежнем уровне.
 
 На рис.~\ref{atu:f:fric_outs} представлен сравнительный пример динамики трёх
 моделей, при одинаковом входном сигнале
@@ -70,7 +71,7 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 устройств, для которых и характерно влияние сухого трения.
 
 Для обеспечения возможности применения методов идентификации,
-необходимо существование критерия идентификации
+необходимо существование критерия
 \( q(x(t)) \),
 удовлетворяющего следующим требованиям:
 
@@ -108,7 +109,7 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 В работе \cite{atu_asau11} был предложен метод синтеза критерия идентификации
 на основе гистерезисной фильтрации выходных сигналов, с последующим
 вычислением производной. Метод показал свою работоспособность, однако,
-он требует достаточно точных сведений об уровне и шумов шумов -- для
+он требует достаточно точных сведений об уровне и виде шумов -- для
 настройки гистерезисного фильтра. В данной работе сделаем предположение,
 что уровень шумов позволяет создать фильтр, позволяющий отсеивать шумы
 за (как максимум) характерное время реакции системы.
@@ -126,10 +127,10 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 \end{figure}
 
 
-Динамика процессов идентификации для системы (\ref{atu:eq:dryfric_sys}) представлена на рис.~\ref{atu:f:spr_a_id}.
-Следует отметить сильное влияние входного сигнала, так как когда системы неподвижны
+Динамика процессов идентификации для системы (\ref{atu:eq:dryfric_sys}) представлена на рис.~\ref{atu:f:fric_id}.
+Следует отметить сильное влияние входного сигнала, В силу того, что когда системы неподвижны
 на одном из ``плато'', то нет возможности различить их параметры,
-какой бы критерий не использовался.
+какой бы критерий при этом не использовался.
 
 \begin{figure}[htb!]
 \centerline{
@@ -142,7 +143,8 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 \label{atu:f:fric_id}
 \end{figure}
 
-Зависимость среднеквадратических ошибок идентификации от величины $q_\gamma$ (рис.~\ref{atu:f:fric_e_qgamma})
+Зависимость среднеквадратических ошибок идентификации от величины коэффициента масштаба
+$q_\gamma$ (рис.~\ref{atu:f:fric_e_qgamma})
 достаточно сильно отличатся от аналогичной, например, для системы ``Sprott A''. На ней явно выражены
 экстремумы, дающие возможность тонкой настройки системы идентификации. Следовательно,
 для данной динамической системы робастные свойства системы идентификации проявляются слабо,
@@ -177,5 +179,5 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 Для данной системы энергетические критерии, аналогичные применённым в предыдущих случаях,
 оказались неприменимы. Критерий, хоть и основанный на измерении производной (после фильтрации),
 оказался работоспособным. В первую очередь это связано с тем, что в основе были положены
-физические принципы, которые для данной системы вполне очевидны.
+физические принципы, которые для системы с сухим трением, вполне очевидны.
 
