--- a/spr_a_testsys.tex
+++ b/spr_a_testsys.tex
@@ -26,8 +26,10 @@
 
 
 В исходном виде система (\ref{atu:eq:spr_a_orig}) имеет фиксированные значения параметров.
-Не изменяя структуры системы, можно ввести 5 параметров, влияющие на её динамку. В
-данной работе рассмотрим только один -- $c_{x_y} $. Система принимает следующий вид:
+Не изменяя структуры системы, можно ввести 5 параметров, влияющие на её динамку.
+Поскольку целью данной работы является определение критериев идентификации параметров
+хаотических объектов, для данной системы
+работе рассмотрим только один параметр -- $c_{x_y} $. Система принимает следующий вид:
 
 \begin{equation}
   \begin{cases}
@@ -58,9 +60,9 @@
 \label{atu:f:spr_a_phase}
 \end{figure}
 
-Важной особенностью поведения этой системы что при $ c_{x_y} \ge 1 $
+Важной особенностью поведения этой системы является то, что при $ c_{x_y} \ge 1 $
 в спектре системы имеются очень ограниченные участки сплошного спектра~(рис.~\ref{atu:f:spr_a_f}).
-При этом, как и для получения корректного спектра, так и для обнаружения разбегания траекторий
+При этом, как и для получения корректного спектра, так и для обнаружения ``разбегания'' траекторий
 необходимо моделирование системы на протяжении достаточно длительного
 (по сравнению с многими схожими системами) модельного времени.
 
@@ -77,7 +79,7 @@
 \end{figure}
 
 Рассмотрим зависимости $q_{*}(c_{x_y}) $ (рис.~\ref{atu:f:spr_a_q})
-для системы (\ref{atu:eq:spr_a}). Анализ зависимостей
+для системы (\ref{atu:eq:spr_a}). Анализ этих зависимостей
 даёт однозначный ответ о возможном виде критерия -- $q_{x^2}$.
 Используя его, строим систему идентификации.
 
@@ -105,9 +107,9 @@
 \end{figure}
 
 Зависимость среднеквадратических ошибок идентификации от величины $q_\gamma$ (рис.~\ref{atu:f:spr_a_e_qgamma})
-свидетельствует о довольно слабой зависимости (в разумных пределах)
-динамики системы идентификации о  этого параметра. Скорее всего,
-здесь проявляются робастные свойства поисковых агентов.
+свидетельствует о довольно слабом влиянии этого параметра
+на динамику системы идентификации.
+Проявляются робастные свойства поисковых агентов.
 
 \begin{figure}[htb!]
 \centerline{
@@ -123,7 +125,7 @@
 
 Зависимости $\bar{e_*}(a_q)$ (рис.~\ref{atu:f:spr_a_e_a_q})
 с одной стороны, позволяют корректно определить время усреденения,
-с другой -- подтверждают тезис о том, что более ярко выраженной изменение
+с другой -- подтверждают тезис о том, что более ярко выраженное изменение
 параметра требует большего времени наблюдения за системой
 для проведения идентификации.
 
@@ -138,7 +140,8 @@
 \label{atu:f:spr_a_e_a_q}
 \end{figure}
 
-И в этом случае удалось создать и критерий идентификации, и работоспособную систему идентификации
-на основании энергетического критерия.
+Таким образом, для хаотической системы ``Sprott A''
+удалось создать и критерий идентификации и работоспособную систему идентификации
+на основании энергетического критерия вида (\ref{atu:eq:q}).
 
 
