Next small fixes.

--- a/atuworks.bib
+++ b/atuworks.bib
@@ -6,12 +6,12 @@
 
 @xdata{asau,
   journal = {Адаптивні системи автоматичного управління. Міжвідом. науково - техн. зб.},
-  location = {Днепр},
+  location = {Днепропетровск},
 }
 
 @xdata{st,
   journal = {Системні технології. Регіональний міжвузівський збірник наукових праць},
-  location = {Днепр},
+  location = {Днепропетровск},
 }
 
 @xdata{ISDMCI,
