--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -389,7 +389,7 @@ $q_{*}(\mu) $, полученные путём моделирования
 \label{atu:f:colp_e_a_q}
 \end{figure}
 
-В целом синтез критерия идентификации, и построение работоспособной системы идентификации для
+В целом синтез критерия идентификации и построение работоспособной системы идентификации для
 системы генератора Колпитца не потребовало никаких специальных подходов и введения дополнительных
 мер оценивания взаимосвязей параметров генератора.
 
