--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -111,9 +111,10 @@ $p_{mi}(t)$ -- для $i$-той модели.
 таким образом, чтобы обеспечить идентификацию заданного параметра.
 
 Один поисковый агент может управлять как одной моделью (рис.~\ref{atu:f:agent1}),
-так и несколькими. При этом
-он может использовать информацию, как полученную как от других
-агентов, так и полученную в результате обработки данных на других уровнях системы идентификации.
+так и несколькими.
+При этом он может использовать информацию,
+как полученную непосредственно от других агентов,
+так и вычисленную в результате обработки данных на других уровнях системы идентификации.
 
 \begin{figure}[htb!]
 \begin{center}
@@ -391,7 +392,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 В целом, применение рассмотренных видов критериев, в совокупности
 с мультимодельными (мультиагентными) методами поисковой идентификации
-оказалось продуктивным, и показало их
+оказалось продуктивным и показало их
 работоспособность для рассмотренных хаотических, и в какой-то мере эквивалентным им
 сложных динамических систем.
 
